--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         color: green;
         font-size: 500%;
         border-style:dotted;
+        vertical-align: middle;
 
       }
       h2{
@@ -25,7 +26,7 @@
     </style>
   </head>
   <body style="background-color: #04B404">
-    <h1 style="color:red">                Antonio</h1>
+    <h1 style="color:red">Antonio</h1>
     <h2 style="color:blue">Llogar</h2>
     <img src="img/devf.png"alt="Escuela" width="20%" heigth="20%"/>
     <p style="color:pink">
