--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         color: green;
         font-size: 500%;
         border-style:dotted;
-        vertical-align: middle;
+        margin: auto;
 
       }
       h2{
