--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       h1{
         color: green;
         font-size: 500%;
-        border-style:dotted;
+        border-style:double;
         margin: auto;
 
       }
