--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         color: green;
         font-size: 500%;
         border-style:double;
+        margin: auto;
       }
       h2{
         color: blue;
