--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         color: blue;
         font-size: 300%;
         font-family: cursive;
+        margin: auto;
       }
     </style>
   </head>
