--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         color: green;
         font-size: 500%;
         border-style:double;
-        margin: auto;
+        margin: 1em;
       }
       h2{
         color: blue;
         font-size: 300%;
         font-family: cursive;
-        margin: auto;
+        margin: 1em;
       }
     </style>
   </head>
