--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <style media="screen">
       body {
         color: blue;
-        background-color: khaki;
+        background-color: pearl;
         font-family: cursive;
-        background-image: url("img/espacio.jpg");
       }
       h1{
         color: green;
