--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         font-family: cursive;
       }
       h1{
-        color: green;
         font-size: 500%;
         border-style:double;
         margin: 1em;
@@ -24,11 +23,11 @@
       }
     </style>
   </head>
-  <body style="background-color: #04B404">
+  <body style="background-color: pearl">
     <h1 style="color:red">Antonio</h1>
     <h2 style="color:blue">Llogar</h2>
     <img src="img/devf.png"alt="Escuela" width="20%" heigth="20%"/>
-    <p style="color:pink">
+    <p style="color:blue">
 
       Economista
 
