--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       }
     </style>
   </head>
-  <body style="background-color: pearl">
+  <body style="background-color: #D6DBDF">
     <h1 style="color:red">Antonio</h1>
     <h2 style="color:blue">Llogar</h2>
     <img src="img/devf.png"alt="Escuela" width="20%" heigth="20%"/>
