--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <style media="screen">
       body {
         color: blue;
-        background-color: pearl;
-        font-family: cursive;
+        background-color: #D6DBDF;
+        font-family: century gothic;
       }
       h1{
         font-size: 500%;
-        border-style:double;
         margin: 1em;
       }
       h2{
@@ -33,14 +32,14 @@
 
     </p>
   Objetivos
-    <ul style="color:#FFFF00">
+    <ul style="color:#2E4053">
       <li class="cosas_#FFFF00 grande">Programación de Apps</li>
       <li>Programación WEB</li>
       <li class="grande">Interacción entre dispositivos</li>
       <li>Conocimiento de Redes</li>
     </ul>
 Temas de interés
-    <ol style="color:#FFFF00">
+    <ol style="color:#2E4053">
       <li>Negocios</li>
       <li>Finanzas</li>
       <li>Ecología</li>
